tests/fail/invalid_syntax_empty_field.rs
use trait_mux::trait_mux;

fn main() {
    trait_mux!(,);
}
